--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.5.7"
+  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.5.8"
   description: >-
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -417,7 +417,15 @@ action:
             target:
               entity_id: "{{ lights_to_turn_off }}"
             data:
-              transition: "{{ transition_time }}"
+              transition: >-
+                {% set lights = expand(lights_to_turn_off) | selectattr('state', 'eq', 'on') | list %}
+                {% if lights | length > 0 %}
+                  {% set avg_brightness = (lights | map(attribute='attributes.brightness') | select('number') | list | sum) / (lights | length) %}
+                  {% set avg_brightness_pct = (avg_brightness / 255 * 100) | round %}
+                  {{ 0 if avg_brightness_pct < 10 else transition_time }}
+                {% else %}
+                  {{ transition_time }}
+                {% endif %}
   - choose:
       - conditions:
           - "{{ command == 'tv_on' }}"
@@ -426,7 +434,15 @@ action:
             target:
               entity_id: "{{ lights_to_turn_off }}"
             data:
-              transition: "{{ transition_time }}"
+              transition: >-
+                {% set lights = expand(lights_to_turn_off) | selectattr('state', 'eq', 'on') | list %}
+                {% if lights | length > 0 %}
+                  {% set avg_brightness = (lights | map(attribute='attributes.brightness') | select('number') | list | sum) / (lights | length) %}
+                  {% set avg_brightness_pct = (avg_brightness / 255 * 100) | round %}
+                  {{ 0 if avg_brightness_pct < 10 else transition_time }}
+                {% else %}
+                  {{ transition_time }}
+                {% endif %}
       - conditions:
           - "{{ command == 'on_press_release' }}"
         sequence:
